--- a/index.html
+++ b/index.html
@@ -62,12 +62,33 @@
             width: 90%;
             z-index: 1;
         }
+        @media (max-width: 480px) {
+            .container {
+                padding: 22px;
+                max-width: 92%;
+            }
+            .family-visual {
+                gap: 8px;
+            }
+            .echo {
+                width: 90px;
+            }
+            button {
+                font-size: 16px;
+                padding: 12px 22px;
+            }
+            .result {
+                font-size: 28px;
+            }
+        }
 
         h1 {
             font-family: 'Fleur De Leah', cursive;
-            font-size: 42px;
             font-weight: normal;
-            white-space: nowrap;
+            white-space: normal;
+            font-size: clamp(26px, 6vw, 42px);
+            line-height: 1.15;
+            margin: 0 0 10px 0;
         }
         button {
             font-size: 18px;
