Adjust scale of echo element in family-visual

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             .family-visual .arrow {
                 transform: scale(0.8);
             }
+            .family-visual .echo {
+                transform: scale(0.5);
+            }
         }
 
         h1 {
